подключила js во втором задании

--- a/task_3/task_3.html
+++ b/task_3/task_3.html
@@ -8,11 +8,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Список заданий</h1>
-    <div class="task">
-      <h2><a href="task_1/task_1.html">Задание № 1</a></h2>
-      <h2><a href="task_2/task_2.html">Задание № 2</a></h2>
-      <h2><a href="task_3/task_.html">Задание № 3</a></h2>
-    </div>
+    <h1>Задание № 3</h1>
   </body>
 </html>
