--- a/task_2/task_2.html
+++ b/task_2/task_2.html
@@ -9,12 +9,11 @@
   </head>
   <body>
     <h1>Задание № 2</h1>
-    <button class="btn">
+    <button class="btn" value="on">
       <div class="btn_text">Кнопка</div>
       <div class="btn_icon">
         <svg
           id="svgPlus"
-          onClick="chg(this.id)"
           xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
