--- a/task_4/task_4.html
+++ b/task_4/task_4.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Задание № 3</h1>
-    <button class="btn j-btn-test">Поиск вашей геолокации</button>
+    <h1>Задание № 4</h1>
+    <div class="tasK">
+      <button class="btn j-btn-test">координаты местоположения пользователя</button>
 
-    <p id="status"></p>
-    <a id="map-link" target="_blank"></a>
-    <p id="size-screen"></p>
-
-    <script src="task_3.js"></script>
+      <textarea id="status" readonly></textarea>
+      <textarea id="data" readonly></textarea>
+    </div>
+    <script src="task_4.js"></script>
   </body>
 </html>
