--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div class="task">
       <h2><a href="task_1/task_1.html">Задание № 1</a></h2>
       <h2><a href="task_2/task_2.html">Задание № 2</a></h2>
-      <h2><a href="task_3/task_.html">Задание № 3</a></h2>
+      <h2><a href="task_3/task_3.html">Задание № 3</a></h2>
+      <h2><a href="task_4/task_4.html">Задание № 4</a></h2>
+			 <h2><a href="task_5/task_5.html">Задание № 5</a></h2>
     </div>
   </body>
 </html>
